[gd_scene load_steps=10 format=3 uid="uid://dqhoj71t80ksq"]

[ext_resource type="Texture2D" uid="uid://dr0cwrc5km5m3" path="res://Entities/NPC/store/Art/背景.png" id="1_leta2"]
[ext_resource type="FontFile" uid="uid://cgx2cpo0iwjb6" path="res://Assets/字体/ark-pixel-10px-monospaced-zh_cn.ttf" id="2_aokjb"]
[ext_resource type="Script" path="res://Entities/NPC/store/商店.gd" id="2_yrjpt"]
[ext_resource type="Script" path="res://Entities/NPC/store/提示.gd" id="4_wx8kq"]
[ext_resource type="AudioStream" uid="uid://b6yx7bp3e6gg" path="res://Entities/NPC/store/Sound/BLLTShel_Reload Ammo_01.wav" id="5_83elb"]
[ext_resource type="Texture2D" uid="uid://cqcqhodb442wl" path="res://Entities/NPC/store/Art/面板.png" id="5_sfl1o"]
[ext_resource type="Script" path="res://addons/animatedbutton/AnimatedButton.gd" id="6_407jv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dmjc7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xkuci"]
bg_color = Color(0, 0, 0, 0.509804)
border_color = Color(0.905882, 0.803922, 0.0823529, 1)

[node name="商店" type="TextureRect"]
material = SubResource("ShaderMaterial_dmjc7")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 401.0
offset_top = 238.0
offset_right = -247.0
offset_bottom = -214.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_leta2")
script = ExtResource("2_yrjpt")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 72.0
offset_top = 44.0
offset_right = 232.0
offset_bottom = 98.0
theme_override_fonts/font = ExtResource("2_aokjb")
theme_override_font_sizes/font_size = 40
text = "装备商店"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 83.0
offset_top = 142.0
offset_right = 1587.0
offset_bottom = 561.0
horizontal_scroll_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -148.0
offset_top = -129.0
offset_right = -60.0
offset_bottom = -81.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_aokjb")
theme_override_font_sizes/font_size = 40
text = "关闭
"
script = ExtResource("6_407jv")
scale_intensity = 0.9

[node name="提示" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -114.5
offset_right = 150.0
offset_bottom = 114.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xkuci")
script = ExtResource("4_wx8kq")

[node name="Label" type="Label" parent="提示"]
layout_mode = 0
offset_left = 31.0
offset_top = 27.0
offset_right = 71.0
offset_bottom = 50.0
text = "名称：攻击之爪"

[node name="Label3" type="Label" parent="提示"]
layout_mode = 0
offset_left = 32.0
offset_top = 64.0
offset_right = 286.0
offset_bottom = 125.0
text = "效果：增加15攻击力"

[node name="Label2" type="Label" parent="提示"]
layout_mode = 0
offset_left = 34.0
offset_top = 158.0
offset_right = 146.0
offset_bottom = 181.0
text = "可与装备合成："

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.662745)

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -285.5
offset_top = -150.5
offset_right = 331.5
offset_bottom = 129.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_sfl1o")

[node name="Label" type="Label" parent="Control/TextureRect"]
layout_mode = 0
offset_left = -48.0
offset_top = -1.0
offset_right = 680.0
offset_bottom = 261.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_aokjb")
theme_override_font_sizes/font_size = 40
text = "确认购买"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 334.0
offset_top = 428.0
offset_right = 619.0
offset_bottom = 490.0
theme_override_fonts/font = ExtResource("2_aokjb")
theme_override_font_sizes/font_size = 40
text = "确认"
script = ExtResource("6_407jv")
scale_intensity = 0.9

[node name="Button2" type="Button" parent="Control"]
layout_mode = 0
offset_left = 699.0
offset_top = 433.0
offset_right = 984.0
offset_bottom = 495.0
theme_override_fonts/font = ExtResource("2_aokjb")
theme_override_font_sizes/font_size = 40
text = "取消"
script = ExtResource("6_407jv")
scale_intensity = 0.9

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_83elb")

[connection signal="pressed" from="Button" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/Button2" to="." method="_on_button_2_pressed"]
